<resources>
  <string name="app_name">SlideShow</string>
  <string name="settings_prompt"><u>Необходимо задать настройки</u></string>
  <string name="images_dir_path">Путь к папке с изображениями:</string>
  <string name="select_dir">Выбрать папку</string>
  <string name="save">Сохранить</string>
  <string name="images_change_interval">Интервал между кадрами\nв секундах</string>
  <string name="schedule_start_time">Запуск слайд-шоу в указанное время</string>
  <string name="schedule_stop_time">Остановка слайд-шоу в указанное время</string>
  <string name="stop_time">Время остановки слайд-шоу:</string>
  <string name="start_time">Время запуска слайд-шоу:</string>
  <string name="settings">Настройки</string>
  <string name="slideShow">Слайд-шоу</string>
  <string name="start_app_after_reboot">Запуск слайд-шоу после перезагрузки</string>
  <string name="start_app_on_charging">Запуск слайд-шоу при зарядке</string>
  <string name="use_dark_theme">Использовать темную тему</string>
</resources>