<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
  <data>
    <variable name="vm" type="ru.rizz.slideshow.settings.SettingsVM"/>
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
      android:id="@+id/scroll"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
          android:id="@+id/imageDirPathText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          android:text="@string/images_dir_path"
          android:textSize="@dimen/_14ssp"
          />
        <TextView
          android:id="@+id/imageDirPath"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintBaseline_toBaselineOf="@id/imageDirPathText"
          app:layout_constraintLeft_toRightOf="@id/imageDirPathText"
          android:layout_marginLeft="@dimen/_5sdp"
          android:textSize="@dimen/_16ssp"
          tools:text="не задан"
          android:text="@{vm.imagesDirPathInfoVM}"
          android:textColor="@{vm.isImagesDirPathSetVM ? @color/green_700 : @color/red_500}"
          />
        <Button
          android:id="@+id/selectDir"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@id/imageDirPath"
          android:layout_marginTop="@dimen/_5sdp"
          android:text="@string/select_dir"
          android:onClick="@{() -> vm.onDirSelectionClick()}"
          />
        <TextView
          android:id="@+id/imagesChangeIntervalText"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@id/selectDir"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toLeftOf="@id/imagesChangeInterval"
          android:layout_marginTop="@dimen/_27sdp"
          android:text="@string/images_change_interval"
          android:textSize="@dimen/_14ssp"
          />
        <NumberPicker android:theme="@style/NumberPickerTheme"
          android:id="@+id/imagesChangeInterval"
          android:layout_width="@dimen/_90sdp"
          android:layout_height="@dimen/_90sdp"
          app:layout_constraintTop_toBottomOf="@id/selectDir"
          app:layout_constraintLeft_toRightOf="@id/imagesChangeIntervalText"
          app:layout_constraintRight_toRightOf="parent"
          app:minValue="@{1}"
          app:maxValue="@{60}"
          android:value="@={vm.imagesChangeIntervalVM}"
          />

        <TextView
          android:id="@+id/startAppOnChargingText"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@id/imagesChangeInterval"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toLeftOf="@id/startAppOnCharging"
          android:text="@string/start_app_on_charging"
          android:textSize="@dimen/_14ssp"
          />
        <androidx.appcompat.widget.SwitchCompat
          android:id="@+id/startAppOnCharging"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintBaseline_toBaselineOf="@id/startAppOnChargingText"
          app:layout_constraintRight_toRightOf="parent"
          android:checked="@={vm.startAppOnChargingVM}"
          />

        <TextView
          android:id="@+id/startAppAfterRebootText"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@id/startAppOnChargingText"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toLeftOf="@id/startAppOnCharging"
          android:layout_marginTop="@dimen/_15sdp"
          android:text="@string/start_app_after_reboot"
          android:textSize="@dimen/_14ssp"
          />
        <androidx.appcompat.widget.SwitchCompat
          android:id="@+id/startAfterReboot"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintBaseline_toBaselineOf="@id/startAppAfterRebootText"
          app:layout_constraintRight_toRightOf="parent"
          android:checked="@={vm.startAppAfterRebootVM}"
          />

        <TextView
          android:id="@+id/useDarkThemeText"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@id/startAppAfterRebootText"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toLeftOf="@id/startAppOnCharging"
          android:layout_marginTop="@dimen/_15sdp"
          android:text="@string/use_dark_theme"
          android:textSize="@dimen/_14ssp"
          />
        <androidx.appcompat.widget.SwitchCompat
          android:id="@+id/useDarkTheme"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintBaseline_toBaselineOf="@id/useDarkThemeText"
          app:layout_constraintRight_toRightOf="parent"
          android:checked="@={vm.useDarkThemeVM}"
          />
      </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>