<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
  <data>
    <variable name="vm" type="ru.rizz.slideshow.settings.SettingsVM"/>
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
      android:id="@+id/scroll"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
          android:id="@+id/scheduleStartTimeText"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          app:layout_constraintBaseline_toBaselineOf="@id/scheduleStartTimeSwitch"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toLeftOf="@id/scheduleStartTimeSwitch"
          android:text="@string/schedule_start_time"
          android:textSize="@dimen/_12ssp"
          />
        <androidx.appcompat.widget.SwitchCompat
          android:id="@+id/scheduleStartTimeSwitch"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          android:layout_marginTop="@dimen/_5sdp"
          android:checked="@={vm.scheduleStartSlideShowFlagVM}"
          />

        <TextView
          android:id="@+id/startTimeText"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@id/scheduleStartTimeSwitch"
          app:layout_constraintLeft_toLeftOf="parent"
          android:text="@string/start_time"
          android:textSize="@dimen/_14ssp"
          />
        <TimePicker style="@style/TimePicker"
          android:theme="@style/TimePickerTheme"
          android:id="@+id/startTime"
          tools:ignore="MissingConstraints"
          app:layout_constraintTop_toBottomOf="@id/startTimeText"
          app:is24HourView="@{true}"
          android:hour="@={vm.startHourVM}"
          android:minute="@={vm.startMinuteVM}"
          />

        <TextView
          android:id="@+id/scheduleStopTimeText"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          app:layout_constraintBaseline_toBaselineOf="@id/scheduleStopTimeSwitch"
          app:layout_constraintLeft_toLeftOf="parent"
          android:text="@string/schedule_stop_time"
          android:textSize="@dimen/_12ssp"
          />
        <androidx.appcompat.widget.SwitchCompat
          android:id="@+id/scheduleStopTimeSwitch"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@id/startTime"
          app:layout_constraintRight_toRightOf="parent"
          android:checked="@={vm.scheduleStopSlideShowFlagVM}"
          />
        <TextView
          android:id="@+id/stopTimeText"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@id/scheduleStopTimeSwitch"
          app:layout_constraintLeft_toLeftOf="parent"
          android:text="@string/stop_time"
          android:textSize="@dimen/_14ssp"
          />
        <TimePicker style="@style/TimePicker"
          android:theme="@style/TimePickerTheme"
          android:id="@+id/stopTime"
          tools:ignore="MissingConstraints"
          app:layout_constraintTop_toBottomOf="@id/stopTimeText"
          app:is24HourView="@{true}"
          android:hour="@={vm.stopHourVM}"
          android:minute="@={vm.stopMinuteVM}"
          />
      </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>